# bacteria

./: Cargo.toml  README.md
benches/: bacteria.rs  prokary.rs  spacesuit.rs  sponge.rs
kat/: boundary_test_vector.json  meta_test_vector.json  simple_test_vector.json  streaming_test_vector.json
src/: internal.rs  internal_test.rs  kat_tests.rs  lib.rs  sponge.rs  strobe.rs  transcript.rs
