[package]
name = "bacteria"
version = "0.0.8"
authors = ["hello@organism.org"]
description = "Bacteria: Strobe & Transcript Protocol"
license = "Apache-2.0"
edition = "2018"


[dependencies]
mohan = "0.0.*"
zeroize = { version = "1.0.0-pre", features = ["zeroize_derive"] }
rand = "0.7.*"
subtle = "2"
rand_core = { version = "0.5.1" }

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand_chacha = "0.2"
hex = "0.3"