[package]
name = "bacteria"
version = "0.0.10"
authors = ["hello@organism.org"]
description = "Bacteria: Strobe & Transcript Protocol"
license = "Apache-2.0"
edition = "2018"


[dependencies]
zeroize = { version = "1", features = ["zeroize_derive"] }
rand = "0.8"
subtle = { git = "https://github.com/stichtingorganism/subtle-ng", version = "^2.2.1", default-features = false }
rand_core = "0.6"
byteorder = "1"

[target.'cfg(any(target_feature = "avx2", target_feature = "avx"))'.dependencies]
curve25519-dalek = { package = "curve25519-dalek-ng", git = "https://github.com/stichtingorganism/curve25519-dalek-ng", version = "4", default-features = false, features = ["simd_backend", "nightly", "serde", "alloc"] }

[target.'cfg(not(any(target_feature = "avx2", target_feature = "avx")))'.dependencies]
curve25519-dalek = { package = "curve25519-dalek-ng",  git = "https://github.com/stichtingorganism/curve25519-dalek-ng", version = "4", default-features = false, features = ["nightly", "u64_backend", "serde", "alloc"] }



[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand_chacha = "0.3"
hex = "0.4"